@@ -1,2 +1,37 @@
+
 # global_gradle.properties
-Global gradle properties for any situation
+This is global gradle properties for faster gradle building in any situation. Just paste this code to your project's **.gradle/X.x(Version)/settings.gradle** and make the building process faster.
+
+
+# Codes
+
+        # The Gradle daemon aims to improve the startup and execution time of Gradle.
+    
+    # When set to true the Gradle daemon is to run the build.
+    
+    org.gradle.daemon=true
+    
+    # Specifies the JVM arguments used for the daemon process.
+    
+    # The setting is particularly useful for tweaking memory settings.
+    
+    # Default value: -Xmx10248m -XX:MaxPermSize=256m
+    
+    org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+    
+    # When configured, Gradle will run in incubating parallel mode.
+    
+    # This option should only be used with decoupled projects. More details, visit
+    
+    # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
+    
+    org.gradle.parallel=true
+    
+    # Enables new incubating mode that makes Gradle selective when configuring projects.
+    
+    # Only relevant projects are configured which results in faster builds for large multi-projects.
+    
+    # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:configuration_on_demand
+    
+    org.gradle.configureondemand=true
+
